# robo-home

./: .gitignore  README.md  TODO.md  config.json.example  main.py  pyproject.toml
src/: client.py  config.py
src/chatgpt/: asyncronous.py  init.py  syncronous.py
src/conversation/: listener.py
src/image/: image.py
src/utils/: decode.py  encode_base64.py  stream.py
src/whisper/: listener.py
