[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.1",
    "keyboard>=0.13.5",
    "openai>=1.75.0",
    "opencv-python>=4.11.0.86",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.1",
    "ultralytics>=8.3.112",
]
